force-app/main/default/objects/Lead/fields/Email_Block__c.field-meta.xml
<CustomField>
    <fullName>Email_Block__c</fullName>
    <formula>IF(ISBLANK(Email), &quot;&quot;, LOWER(TRIM(Email)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Block</label>
    <type>Text</type>
</CustomField>