force-app/main/default/objects/Lead/fields/Email_Collection__c.field-meta.xml
<CustomField>
    <fullName>Email_Collection__c</fullName>
    <label>Email Collection</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>