force-app/main/default/objects/Lead/fields/Phone_Block__c.field-meta.xml
<CustomField>
    <fullName>Phone_Block__c</fullName>
    <formula>IF(ISBLANK(Phone), &quot;&quot;,
  RIGHT(
    SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(
      Phone,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),
  10)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Block</label>
    <type>Text</type>
</CustomField>