force-app/main/default/objects/Lead/fields/Portal_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_ID__c</fullName>
    <label>Portal User ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>